tests/diagnostics_golden/diag_index_oob.txt
Diagnostics Golden: Index Oob
Source: tests/negative/neg_rule2_oob.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule2_oob.safe:15:14: error: index expression not provably within array bounds
  |
  | 15 |       return arr (slot (idx));  -- ERROR: Idx may not be in 0..7
  |    |              ^~~~~~~~~~~~~~~~
  |
  note: array 'arr' has index range slot (0 .. 7).
  note: index expression 'slot (idx)' has type integer, with range
        [integer'First .. integer'Last].
  note: static analysis cannot establish that the index is within
        [0 .. 7] on all execution paths.
  note: rule: D27 Rule 2 (Provable Index Safety)
  note: per spec/02-restrictions.md section 2.8.2 paragraph 131:
        "The index expression in an indexed_component shall be provably
        within the array object's index bounds at compile time."
  note: per spec/02-restrictions.md section 2.8.2 paragraph 132:
        "If neither condition holds, the program is nonconforming and
        the implementation shall reject it with a diagnostic identifying
        the indexed_component and the unresolvable bound relationship."
  suggestion: add a bounds check before indexing:
        if idx >= 0 and then idx <= 7 then
           return arr (slot (idx));
        end if;

------------------------------------------------------------------------
